# vn2_challenge

./: .gitignore  .pre-commit-config.yaml  README.md  configurar_vscode.md  pyproject.toml
data/: Readme.md
data/input/: Readme.md
data/input/raw_prev_submissions/: output_salesw1.csv
data/input/to_models/: Week 1 - 2024-04-15 - Sales.csv  Week 2 - 2024-04-22 - Initial State.csv  Week 2 - 2024-04-22 - Sales.csv
data/preprocess/: data.parquet  data_in_stock.parquet  data_master.parquet  data_state.parquet
data/processed/: data.parquet  data_in_stock.parquet  data_state.parquet  data_submission.parquet
notebooks/: 0_official_benchmark.ipynb  1_official_inventory_simulation.ipynb  2_discovery.ipynb  Readme.md  x_nixlta_respaldo_static_features.py
notebooks/discovery/: 1_official_inventory_simulation.ipynb  Readme.md
src/: test_script.py  test_script_notebook.py
src/0_preprocess/: preprocess.py
src/fcst_demand/: fcst_nixtla_lgbm.py  metricas_forecasts.ipynb
src/fill_no_stock_data/: fill_no_stock_data.ipynb  interpolate_fill_nan.py  model_fill_nan.py
src/forecast_plus_rl/: Readme.md  rl.py
src/forecast_plus_rl/optimization/: rl_v2.py
src/naive_perfect_forecast/forecast/: analizar_data_backtest_summary_real.ipynb  fcst_nixtla_lgbm.py  fcst_nixtla_lgbm_backtest.py  fcst_nixtla_lgbm_error_promedio.py  metricas_forecasts.ipynb  metricas_forecasts_backtest.ipynb  metricas_forecasts_dev.ipynb
src/optimize_costs/: naive_optimization.py
src/preprocess/: preprocess.py  update_raw.py
src/utils/: metrics.py  models_fcst.py  models_optimization.py  utils.py
(+5 files in other folders)
